Current

Fixed: 113: getCommandDescription() returns the description of the main parameter instead of that of the command
Fixed: bug with several multiple arity parameters (VariableArityTest)
Fixed: variable arities not working when same parameter appears multiple times.

1.25
2012/04/26
Added: Default passwords are no longer displayed in the usage (Paul Mendelson)
Added: Variable arities now work magically, no need for IVariableArity any more
Fixed: Commands using @Parameters(resourceBundle) were not i18n'ed properly in the usage()
Fixed: StringIndexOutOfBoundsException if passing an empty parameter (bomanz)
Fixed: GITHUB-105: If no description is given for an enum, use that enum's value (Adrian Muraru)
Fixed: GITHUB-108: Dynamic parameters with "=" in them are not parsed correctly (szhem)
Fixed: Commands with same prefix as options were not working properly.
Fixed: GITHUB-97: Required password always complains that it is not specified (timoteoponce)

1.23
2012/01/12

Added: @DynamicParameter
Fixed: Use JDK 6 Console() when available to improve support of non ascii chars (Julien Henry)

1.20
2011/11/24

Added: Support for delegating parameter definitions to child classes (rodionmoiseev)
Added: @Parameter(commandNames) so that command names can be specified with annotations
Added: Support for enums (Adrian Muraru)
Fixed: Throw if an unknown option is found
Fixed: Main parameters are now validated as well (Connor Mullen)

1.19
2011/10/10

Added: commandDescriptionKey to @Parameters, to allow internationalized command descriptions
Added: JCommander#setParameterDescriptionComparator for better control over usage()
Fixed: Fields of type Set (HashSet and SortedSet) are now supported
Fixed: defaults for commands were not properly applied (Stevo Slavic)
Fixed: "-args=a=b,b=c" was not being parsed correctly (Michael Lancaster)
Fixed: GITHUB-73: descriptionKey was being ignored on main parameters

1.18
2011/07/20
