@@ -1,0 +1,7 @@
+package com.beust.jcommander;
+
+public class Strings {
+  public static boolean isStringEmpty(String s) {
+    return s == null || "".equals(s);
+  }
+}
